force-app/main/default/objects/Factoring_Relationship__c/Factoring_Relationship__c.object-meta.xml
<CustomObject>
    <label>Factoring Relationship</label>
    <nameField>
        <displayFormat>FAC-{YYYY}-{MM}-{0000}</displayFormat>
        <label>Factoring Relationship</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Factoring Relationships</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>