force-app/main/default/objects/Factoring_Relationship__c/fields/Buyer_Account__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Buyer Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Factoring Relationships as Buyer</relationshipLabel>
    <relationshipName>Factoring_Relationships</relationshipName>
    <type>Lookup</type>
</CustomField>