force-app/main/default/objects/Factoring_Relationship__c/fields/Buyer_DBA__c.field-meta.xml
<CustomField>
    <fullName>Buyer_DBA__c</fullName>
    <formula>Buyer_Account__r.DBA__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Buyer DBA</label>
    <type>Text</type>
</CustomField>