force-app/main/default/objects/Factoring_Relationship__c/fields/Factoring_Assignee__c.field-meta.xml
<CustomField>
    <fullName>Factoring_Assignee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Factoring Assignee</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Factoring Relationships</relationshipLabel>
    <relationshipName>Factoring_Relationships1</relationshipName>
    <type>Lookup</type>
</CustomField>