force-app/main/default/objects/Factoring_Relationship__c/fields/Factoring_Assignee_DBA__c.field-meta.xml
<CustomField>
    <fullName>Factoring_Assignee_DBA__c</fullName>
    <formula>Factoring_Assignee__r.DBA__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Factoring Assignee DBA</label>
    <type>Text</type>
</CustomField>