force-app/main/default/objects/Factoring_Relationship__c/fields/Master_Assignment_Date__c.field-meta.xml
<CustomField>
    <fullName>Master_Assignment_Date__c</fullName>
    <label>Master Assignment Date</label>
    <type>Date</type>
</CustomField>