force-app/main/default/objects/Factoring_Relationship__c/fields/Seller_Account__c.field-meta.xml
<CustomField>
    <fullName>Seller_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Seller Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Factoring Relationships as Seller</relationshipLabel>
    <relationshipName>Factoring_Relationships2</relationshipName>
    <type>Lookup</type>
</CustomField>