force-app/main/default/objects/Factoring_Relationship__c/fields/Seller_DBA__c.field-meta.xml
<CustomField>
    <fullName>Seller_DBA__c</fullName>
    <formula>Seller_Account__r.DBA__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Seller DBA</label>
    <type>Text</type>
</CustomField>