force-app/main/default/objects/Factoring_Relationship__c/fields/Total_Factoring_Rates__c.field-meta.xml
<CustomField>
    <fullName>Total_Factoring_Rates__c</fullName>
    <label>Total Factoring Rates</label>
    <summaryForeignKey>Factoring_Rate__c.Factoring_Relationship__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>