force-app/main/default/objects/Factoring_Relationship__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Buyer_Account__c</columns>
    <columns>Buyer_DBA__c</columns>
    <columns>Factoring_Assignee__c</columns>
    <columns>Factoring_Assignee_DBA__c</columns>
    <columns>Master_Assignment_Date__c</columns>
    <columns>Seller_Account__c</columns>
    <columns>Seller_DBA__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>